--- a/index.html
+++ b/index.html
@@ -35,11 +35,21 @@
 				</nav>
 
 				<ul class="main-contacts list">
-					<li class="decor-contacts">
-						<a class="contacts link-decor" href="mailto:info@devstudio.com">info@devstudio.com</a>
+					<li class="decor-contacts ">
+						<a class="contacts link-decor" href="mailto:info@devstudio.com"> 
+						<svg class="icon-mail">
+							<use href="./images/icons.svg#icon-envelope"></use>
+						</svg>
+							info@devstudio.com
+						</a>
 					</li>
 					<li class="decor-contacts">
-						<a class="contacts link-decor" href="tel:+380961111111">+38 096 111 11 11</a>
+						<a class="contacts link-decor" href="tel:+380961111111">
+							<svg class="icon-phone">
+								<use href="./images/icons.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -58,23 +68,23 @@
 				<div class="container">
 					<h2 class="second-hero visually-hidden">Наші сильні сторони</h2>
 					<ul class="list first-list">
-						<li class="first-item">
+						<li class="first-item icon-antenna">
 							<h3 class="title-about">Уважність до деталів</h3>
 							<p class="content main-content">
 								Ідейні міркування, а також початок повсякденної роботи з формування позиції.
 							</p>
 						</li>
-						<li class="first-item">
+						<li class="first-item icon-clock">
 							<h3 class="title-about">Пунктуальність</h3>
 							<p class="content main-content">
 								Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
 							</p>
 						</li>
-						<li class="first-item">
+						<li class="first-item icon-diagrama">
 							<h3 class="title-about">Планування</h3>
 							<p class="content main-content">Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
-						<li class="first-item">
+						<li class="first-item icon-astrounaut">
 							<h3 class="title-about">Сучасні технології</h3>
 							<p class="content main-content">
 								Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -110,6 +120,36 @@
 							<div class="team-decor">
 								<h3 class="team-title">Ігор Дем'яненко</h3>
 								<p class="content team-content">Product Designer</p>
+								<ul class="list icon-team">
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor instagram">
+									<use href="./images/icons.svg#icon-instagram-2"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor twitter">
+									<use href="./images/icons.svg#icon-twitter-1"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor facebook">
+									<use href="./images/icons.svg#icon-facebook-1"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor linkedin">
+									<use href="./images/icons.svg#icon-linkedin-1"> </use>
+								    </svg>
+									</a>
+								</li>
+							    </ul>
 							</div>
 						</li>
 						<li class="team-foto">
@@ -117,6 +157,36 @@
 							<div class="team-decor">
 								<h3 class="team-title">Ольга Репіна</h3>
 								<p class="content team-content">Frontend Developer</p>
+								<ul class="list icon-team">
+								<li class="icon-instagram">
+									<a class="icon-link" href="">
+									<svg class="icon-team-decor instagram">
+									<use href="./images/icons.svg#icon-instagram-2"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a class="icon-link" href="">
+									<svg class="icon-team-decor twitter">
+									<use href="./images/icons.svg#icon-twitter-1"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a class="icon-link" href="">
+									<svg class="icon-team-decor facebook">
+									<use href="./images/icons.svg#icon-facebook-1"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a class="icon-link" href="">
+									<svg class="icon-team-decor linkedin">
+									<use href="./images/icons.svg#icon-linkedin-1"> </use>
+								    </svg>
+									</a>
+								</li>
+							    </ul>
 							</div>
 						</li>
 						<li class="team-foto">
@@ -124,6 +194,36 @@
 							<div class="team-decor">
 								<h3 class="team-title">Микола Тарасов</h3>
 								<p class="content team-content">Marketing</p>
+								<ul class="list icon-team">
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor instagram">
+									<use href="./images/icons.svg#icon-instagram-2"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor twitter">
+									<use href="./images/icons.svg#icon-twitter-1"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor facebook">
+									<use href="./images/icons.svg#icon-facebook-1"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor linkedin">
+									<use href="./images/icons.svg#icon-linkedin-1"> </use>
+								    </svg>
+									</a>
+								</li>
+							    </ul>
 							</div>
 						</li>
 						<li class="team-foto">
@@ -131,9 +231,89 @@
 							<div class="team-decor">
 								<h3 class="team-title">Михайло Єрмаков</h3>
 								<p class="content team-content">UI Designer</p>
+								<ul class="list icon-team">
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor instagram">
+									<use href="./images/icons.svg#icon-instagram-2"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor twitter">
+									<use href="./images/icons.svg#icon-twitter-1"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor facebook">
+									<use href="./images/icons.svg#icon-facebook-1"> </use>
+								    </svg>
+									</a>
+								</li>
+								<li class="icon-instagram">
+									<a href="">
+									<svg class="icon-team-decor linkedin">
+									<use href="./images/icons.svg#icon-linkedin-1"> </use>
+								    </svg>
+									</a>
+								</li>
+							    </ul>
 							</div>
 						</li>
 					</ul>
+				</div>
+			</section>
+			<section class="section">
+				<div class="container">
+				<h2 class="second-hero" > Постійні клієнти</h2>
+				
+				<ul class="list clients">
+					<li class="icon-clients">
+						<a href="">
+							<svg class="icon-company">
+							<use href="./images/icons.svg#icon-group"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="icon-clients">
+						<a href="">
+							<svg class="icon-company">
+							<use href="./images/icons.svg#icon-group-1"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="icon-clients">
+						<a href="">
+							<svg class="icon-company">
+							<use href="./images/icons.svg#icon-group-2"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="icon-clients">
+						<a href="">
+							<svg class="icon-company">
+							<use href="./images/icons.svg#icon-logo"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="icon-clients">
+						<a href="">
+							<svg class="icon-company">
+							<use href="./images/icons.svg#icon-group-4"></use>
+							</svg>
+						</a>
+					</li>
+					<li class="icon-clients">
+						<a href="">
+							<svg class="icon-company">
+							<use href="./images/icons.svg#icon-group-5"></use>
+							</svg>
+						</a>
+					</li>					
+				</ul>
 				</div>
 			</section>
 		</main>
