--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 					<li class="decor-contacts ">
 						<a class="contacts link-decor" href="mailto:info@devstudio.com"> 
 						<svg class="icon-mail">
-							<use href="./images/icons.svg#icon-envelope"></use>
+							<use href="./images/symbol-defs.svg#icon-envelope"></use>
 						</svg>
 							info@devstudio.com
 						</a>
@@ -46,7 +46,7 @@
 					<li class="decor-contacts">
 						<a class="contacts link-decor" href="tel:+380961111111">
 							<svg class="icon-phone">
-								<use href="./images/icons.svg#icon-smartphone"></use>
+								<use href="./images/symbol-defs.svg#icon-smartphone"></use>
 							</svg>
 							+38 096 111 11 11
 						</a>
@@ -68,23 +68,37 @@
 				<div class="container">
 					<h2 class="second-hero visually-hidden">Наші сильні сторони</h2>
 					<ul class="list first-list">
-						<li class="first-item icon-antenna">
+						
+						<li class="first-item">
+							<svg class="icon-antenna"> 
+								<use href="./images/symbol-defs.svg#icon-antenna"></use>
+							</svg>
 							<h3 class="title-about">Уважність до деталів</h3>
 							<p class="content main-content">
 								Ідейні міркування, а також початок повсякденної роботи з формування позиції.
 							</p>
+							
 						</li>
-						<li class="first-item icon-clock">
+						<li class="first-item">
+							<svg class="icon-antenna"> 
+								<use href="./images/symbol-defs.svg#icon-clock"></use>
+							</svg>
 							<h3 class="title-about">Пунктуальність</h3>
 							<p class="content main-content">
 								Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
 							</p>
 						</li>
-						<li class="first-item icon-diagrama">
+						<li class="first-item">
+							<svg class="icon-antenna"> 
+								<use href="./images/symbol-defs.svg#icon-diagram"></use>
+							</svg>
 							<h3 class="title-about">Планування</h3>
 							<p class="content main-content">Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
-						<li class="first-item icon-astrounaut">
+						<li class="first-item">
+							<svg class="icon-antenna"> 
+								<use href="./images/symbol-defs.svg#icon-astronaut"></use>
+							</svg>
 							<h3 class="title-about">Сучасні технології</h3>
 							<p class="content main-content">
 								Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -120,32 +134,34 @@
 							<div class="team-decor">
 								<h3 class="team-title">Ігор Дем'яненко</h3>
 								<p class="content team-content">Product Designer</p>
+
 								<ul class="list icon-team">
-								<li class="icon-instagram">
-									<a href="">
-									<svg class="icon-team-decor instagram">
-									<use href="./images/icons.svg#icon-instagram-2"> </use>
+
+								<li class="">
+									<a class="link-icon-team link-decor" href="">
+									<svg class="icon-team-decor instagram"> 
+									<use href="./images/symbol-defs.svg#icon-instagram"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor twitter">
-									<use href="./images/icons.svg#icon-twitter-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-twitter"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor facebook">
-									<use href="./images/icons.svg#icon-facebook-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-facebook"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor linkedin">
-									<use href="./images/icons.svg#icon-linkedin-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-linkedin"> </use>
 								    </svg>
 									</a>
 								</li>
@@ -158,31 +174,32 @@
 								<h3 class="team-title">Ольга Репіна</h3>
 								<p class="content team-content">Frontend Developer</p>
 								<ul class="list icon-team">
-								<li class="icon-instagram">
-									<a class="icon-link" href="">
-									<svg class="icon-team-decor instagram">
-									<use href="./images/icons.svg#icon-instagram-2"> </use>
+
+								<li class="">
+									<a class="link-icon-team link-decor" href="">
+									<svg class="icon-team-decor instagram"> 
+									<use href="./images/symbol-defs.svg#icon-instagram"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a class="icon-link" href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor twitter">
-									<use href="./images/icons.svg#icon-twitter-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-twitter"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a class="icon-link" href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor facebook">
-									<use href="./images/icons.svg#icon-facebook-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-facebook"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a class="icon-link" href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor linkedin">
-									<use href="./images/icons.svg#icon-linkedin-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-linkedin"> </use>
 								    </svg>
 									</a>
 								</li>
@@ -195,31 +212,32 @@
 								<h3 class="team-title">Микола Тарасов</h3>
 								<p class="content team-content">Marketing</p>
 								<ul class="list icon-team">
-								<li class="icon-instagram">
-									<a href="">
-									<svg class="icon-team-decor instagram">
-									<use href="./images/icons.svg#icon-instagram-2"> </use>
+
+								<li class="">
+									<a class="link-icon-team link-decor" href="">
+									<svg class="icon-team-decor instagram"> 
+									<use href="./images/symbol-defs.svg#icon-instagram"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor twitter">
-									<use href="./images/icons.svg#icon-twitter-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-twitter"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor facebook">
-									<use href="./images/icons.svg#icon-facebook-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-facebook"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor linkedin">
-									<use href="./images/icons.svg#icon-linkedin-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-linkedin"> </use>
 								    </svg>
 									</a>
 								</li>
@@ -232,31 +250,32 @@
 								<h3 class="team-title">Михайло Єрмаков</h3>
 								<p class="content team-content">UI Designer</p>
 								<ul class="list icon-team">
-								<li class="icon-instagram">
-									<a href="">
-									<svg class="icon-team-decor instagram">
-									<use href="./images/icons.svg#icon-instagram-2"> </use>
+
+								<li class="">
+									<a class="link-icon-team link-decor" href="">
+									<svg class="icon-team-decor instagram"> 
+									<use href="./images/symbol-defs.svg#icon-instagram"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor twitter">
-									<use href="./images/icons.svg#icon-twitter-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-twitter"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor facebook">
-									<use href="./images/icons.svg#icon-facebook-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-facebook"> </use>
 								    </svg>
 									</a>
 								</li>
 								<li class="icon-instagram">
-									<a href="">
+									<a class=" link-icon-team link-decor" href="">
 									<svg class="icon-team-decor linkedin">
-									<use href="./images/icons.svg#icon-linkedin-1"> </use>
+									<use href="./images/symbol-defs.svg#icon-linkedin"> </use>
 								    </svg>
 									</a>
 								</li>
