--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
 	</head>
 	<body class="Page">
 		<!--header-->
-		<header class="header-line">
+		<header>
 			<div class="header container">
 				<nav class="header-nav">
 					<a class="link-decor logo-decor" href="./index.html">
@@ -27,7 +27,7 @@
 					</a>
 
 					<ul class="nav list">
-						<li class="list-link"><a href="./index.html" class="link link-decor ">Студія</a></li>
+						<li class="list-link"><a href="./index.html" class="link link-decor">Студія</a></li>
 						<li class="list-link"><a href="./portfolio.html" class="link link-decor link-active">Портфоліо</a></li>
 						<li class="list-link"><a href="#" class="link link-decor">Контакти</a></li>
 					</ul>
@@ -35,10 +35,20 @@
 
 				<ul class="main-contacts list">
 					<li class="decor-contacts">
-						<a class="contacts link-decor" href="mailto:info@devstudio.com">info@devstudio.com</a>
+						<a class="contacts link-decor" href="mailto:info@devstudio.com">
+							<svg class="icon-mail">
+								<use href="./images/icons.svg#icon-envelope"></use>
+							</svg>
+							info@devstudio.com
+						</a>
 					</li>
 					<li class="decor-contacts">
-						<a class="contacts link-decor" href="tel:+380961111111">+38 096 111 11 11</a>
+						<a class="contacts link-decor" href="tel:+380961111111">
+							<svg class="icon-phone">
+								<use href="./images/icons.svg#icon-smartphone"></use>
+							</svg>
+							+38 096 111 11 11
+						</a>
 					</li>
 				</ul>
 			</div>
@@ -56,15 +66,15 @@
 						<li class="portfolio-btn"><button type="button" class="second-btn btn-four">Дизайн</button></li>
 						<li class="portfolio-btn"><button type="button" class="second-btn btn-five">Маркетинг</button></li>
 					</ul>
-				
+
 					<!-- пропозиції -->
 					<ul class="proposition list">
 						<li class="proposition-decor">
 							<a class="portfolio-list" href="./index.html">
 								<img src="images/img.jpg" alt="laptop" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Технокряк</h2>
-								<p class="content second-content">Веб-сайт</p>
+									<h2 class="portfolio-title">Технокряк</h2>
+									<p class="content second-content">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
@@ -73,8 +83,8 @@
 							<a class="portfolio-list" href="">
 								<img src="images/img1.jpg" alt="basketball" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
-								<p class="content second-content">Дизайн</p>
+									<h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+									<p class="content second-content">Дизайн</p>
 								</div>
 							</a>
 						</li>
@@ -83,9 +93,9 @@
 							<a class="portfolio-list" href="">
 								<img src="images/img2.jpg" alt=" logo Seafood restaurant" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Ресторан Seafood</h2>
-								<p class="content second-content">Додаток</p>
-							</div>
+									<h2 class="portfolio-title">Ресторан Seafood</h2>
+									<p class="content second-content">Додаток</p>
+								</div>
 							</a>
 						</li>
 
@@ -93,9 +103,9 @@
 							<a class="portfolio-list" href="">
 								<img src="images/img3.jpg" alt="headphone" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Проект Prime</h2>
-								<p class="content second-content">Маркетинг</p>
-							</div>
+									<h2 class="portfolio-title">Проект Prime</h2>
+									<p class="content second-content">Маркетинг</p>
+								</div>
 							</a>
 						</li>
 
@@ -103,9 +113,9 @@
 							<a class="portfolio-list" href="">
 								<img src="images/img4.jpg" alt="two small boxes" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Проект Boxes</h2>
-								<p class="content second-content">Додаток</p>
-							</div>
+									<h2 class="portfolio-title">Проект Boxes</h2>
+									<p class="content second-content">Додаток</p>
+								</div>
 							</a>
 						</li>
 
@@ -113,8 +123,8 @@
 							<a class="portfolio-list" href="">
 								<img src="images/img5.jpg" alt="monitor" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Inspiration has no Borders</h2>
-								<p class="content second-content">Веб-сайт</p>
+									<h2 class="portfolio-title">Inspiration has no Borders</h2>
+									<p class="content second-content">Веб-сайт</p>
 								</div>
 							</a>
 						</li>
@@ -123,8 +133,8 @@
 							<a class="portfolio-list" href="">
 								<img src="images/img6.jpg" alt="a book" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Видання Limited Edition</h2>
-								<p class="content second-content">Дизайн</p>
+									<h2 class="portfolio-title">Видання Limited Edition</h2>
+									<p class="content second-content">Дизайн</p>
 								</div>
 							</a>
 						</li>
@@ -133,8 +143,8 @@
 							<a class="portfolio-list" href="">
 								<img src="images/img7.jpg" alt="some label" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Проект LAB</h2>
-								<p class="content second-content">Маркетинг</p>
+									<h2 class="portfolio-title">Проект LAB</h2>
+									<p class="content second-content">Маркетинг</p>
 								</div>
 							</a>
 						</li>
@@ -143,8 +153,8 @@
 							<a class="portfolio-list" href="">
 								<img src="images/img8.jpg" alt="some one work at laptop" width="370" />
 								<div class="decor-text">
-								<h2 class="portfolio-title">Growing Business</h2>
-								<p class="content second-content">Додаток</p>
+									<h2 class="portfolio-title">Growing Business</h2>
+									<p class="content second-content">Додаток</p>
 								</div>
 							</a>
 						</li>
@@ -154,31 +164,66 @@
 		</main>
 		<!-- footer -->
 		<footer class="address">
-			<div class="container">
-				<a class="link-decor decor-address" href="./index.html">
-					<span class="logo">Web</span><span class="logo-three">Studio</span>
-				</a>
+			<div class="container footer-flex">
+				<div>
+					<a class="link-decor decor-address" href="./index.html">
+						<span class="logo">Web</span><span class="logo-three">Studio</span>
+					</a>
 
-				<address class="adress">
-					<ul class="adress-nav list">
-						<li class="addres-item">
-							<a
-								class="location link-decor"
-								href="https://goo.gl/maps/icbzuspawYWSh7ycA"
-								target="_blank"
-								rel="noreferrer noopener nofollow"
-							>
-								м.Київ, бульвар Лесі Українки, 26
+					<address class="adress">
+						<ul class="adress-nav list">
+							<li class="addres-item">
+								<a
+									class="location link-decor"
+									href="https://goo.gl/maps/icbzuspawYWSh7ycA"
+									target="_blank"
+									rel="noreferrer noopener nofollow"
+								>
+									м.Київ, бульвар Лесі Українки, 26
+								</a>
+							</li>
+							<li class="addres-item">
+								<a class="contact link-decor contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+							</li>
+							<li class="addres-item">
+								<a class="contact link-decor contact-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+							</li>
+						</ul>
+					</address>
+				</div>
+				<div class="social">
+					<h3 class="fotter-header">Приєднуйся</h3>
+					<ul class="list icon-footer">
+						<li class="white-icon-footer">
+							<a class="link-icon-team link-decor" href="">
+								<svg class="icon-team-decor instagram">
+									<use href="./images/icons.svg#icon-instagram"></use>
+								</svg>
 							</a>
 						</li>
-						<li class="addres-item">
-							<a class="contact link-decor contact-footer" href="mailto:info@devstudio.com">info@devstudio.com</a>
+						<li class="white-icon-footer">
+							<a class="link-icon-team link-decor" href="">
+								<svg class="icon-team-decor twitter">
+									<use href="./images/icons.svg#icon-twitter"></use>
+								</svg>
+							</a>
 						</li>
-						<li class="addres-item">
-							<a class="contact link-decor contact-footer" href="tel:+380961111111">+38 096 111 11 11</a>
+						<li class="white-icon-footer">
+							<a class="link-icon-team link-decor" href="">
+								<svg class="icon-team-decor facebook">
+									<use href="./images/icons.svg#icon-facebook"></use>
+								</svg>
+							</a>
+						</li>
+						<li class="white-icon-footer">
+							<a class="link-icon-team link-decor" href="">
+								<svg class="icon-team-decor linkedin">
+									<use href="./images/icons.svg#icon-linkedin"></use>
+								</svg>
+							</a>
 						</li>
 					</ul>
-				</address>
+				</div>
 			</div>
 		</footer>
 	</body>
