correct a mistake and update styles.css

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		<!-- Main content -->
 		<main>
 			<!-- Герой -->
-			<section class="hero-section section">
+			<section class="hero-section">
 				<div class="container">
 					<h1 class="hero">ефективне рішення для вашого бізнесу</h1>
 					<button type="button" class="btn main-btn">Замовити послугу</button>
@@ -69,34 +69,42 @@
 					<h2 class="second-hero visually-hidden">Наші сильні сторони</h2>
 					<ul class="list first-list">
 						<li class="first-item">
+							<div class="decor-about-icon">
 							<svg class="icon-antenna">
 								<use href="./images/icons.svg#icon-antenna"></use>
 							</svg>
+							</div>
 							<h3 class="title-about">Уважність до деталів</h3>
 							<p class="content main-content">
 								Ідейні міркування, а також початок повсякденної роботи з формування позиції.
 							</p>
 						</li>
 						<li class="first-item">
+							<div class="decor-about-icon">
 							<svg class="icon-antenna">
 								<use href="./images/icons.svg#icon-clock"></use>
 							</svg>
+							</div>
 							<h3 class="title-about">Пунктуальність</h3>
 							<p class="content main-content">
 								Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
 							</p>
 						</li>
 						<li class="first-item">
+							<div class="decor-about-icon">
 							<svg class="icon-antenna">
 								<use href="./images/icons.svg#icon-diagram"></use>
 							</svg>
+							</div>
 							<h3 class="title-about">Планування</h3>
 							<p class="content main-content">Так само консультація з широким активом значною мірою зумовлює.</p>
 						</li>
 						<li class="first-item">
+							<div class="decor-about-icon">
 							<svg class="icon-antenna">
 								<use href="./images/icons.svg#icon-astronaut"></use>
 							</svg>
+							</div>
 							<h3 class="title-about">Сучасні технології</h3>
 							<p class="content main-content">
 								Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -364,28 +372,28 @@
 					<h3 class="fotter-header">Приєднуйся</h3>
 					<ul class="list icon-footer">
 						<li class="white-icon-footer">
-							<a class="link-icon-team link-decor" href="">
+							<a class="link-icon-team link-decor link-icon-footer" href="">
 								<svg class="icon-team-decor instagram">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="white-icon-footer">
-							<a class="link-icon-team link-decor" href="">
+							<a class="link-icon-team link-decor link-icon-footer" href="">
 								<svg class="icon-team-decor twitter">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="white-icon-footer">
-							<a class="link-icon-team link-decor" href="">
+							<a class="link-icon-team link-decor link-icon-footer" href="">
 								<svg class="icon-team-decor facebook">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="white-icon-footer">
-							<a class="link-icon-team link-decor" href="">
+							<a class="link-icon-team link-decor link-icon-footer" href="">
 								<svg class="icon-team-decor linkedin">
 									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg>
