--- a/portfolio.html
+++ b/portfolio.html
@@ -20,7 +20,7 @@
 	<body class="Page">
 		<!--header-->
 		<header>
-			<div class="header container">
+			<div class="header container header-line">
 				<nav class="header-nav">
 					<a class="link-decor logo-decor" href="./index.html">
 						<span class="logo">Web</span>Studio
@@ -195,28 +195,28 @@
 					<h3 class="fotter-header">Приєднуйся</h3>
 					<ul class="list icon-footer">
 						<li class="white-icon-footer">
-							<a class="link-icon-team link-decor" href="">
+							<a class="link-icon-team link-decor link-icon-footer" href="">
 								<svg class="icon-team-decor instagram">
 									<use href="./images/icons.svg#icon-instagram"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="white-icon-footer">
-							<a class="link-icon-team link-decor" href="">
+							<a class="link-icon-team link-decor link-icon-footer" href="">
 								<svg class="icon-team-decor twitter">
 									<use href="./images/icons.svg#icon-twitter"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="white-icon-footer">
-							<a class="link-icon-team link-decor" href="">
+							<a class="link-icon-team link-decor link-icon-footer" href="">
 								<svg class="icon-team-decor facebook">
 									<use href="./images/icons.svg#icon-facebook"></use>
 								</svg>
 							</a>
 						</li>
 						<li class="white-icon-footer">
-							<a class="link-icon-team link-decor" href="">
+							<a class="link-icon-team link-decor link-icon-footer" href="">
 								<svg class="icon-team-decor linkedin">
 									<use href="./images/icons.svg#icon-linkedin"></use>
 								</svg>
