change h3 in footer for p

--- a/portfolio.html
+++ b/portfolio.html
@@ -192,7 +192,7 @@
 					</address>
 				</div>
 				<div class="social">
-					<h3 class="fotter-header">Приєднуйся</h3>
+					<p class="fotter-header">Приєднуйся</p>
 					<ul class="list icon-footer">
 						<li class="white-icon-footer">
 							<a class="link-icon-team link-decor link-icon-footer" href="">
