--- a/index.html
+++ b/index.html
@@ -142,30 +142,30 @@
 								<p class="content team-content">Product Designer</p>
 
 								<ul class="list icon-team">
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor instagram">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor twitter">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor facebook">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor linkedin">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
@@ -179,30 +179,30 @@
 								<h3 class="team-title">Ольга Репіна</h3>
 								<p class="content team-content">Frontend Developer</p>
 								<ul class="list icon-team">
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor instagram">
+											<svg class="icon-team-decor ">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor twitter">
+											<svg class="icon-team-decor ">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor facebook">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor linkedin">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
@@ -216,30 +216,30 @@
 								<h3 class="team-title">Микола Тарасов</h3>
 								<p class="content team-content">Marketing</p>
 								<ul class="list icon-team">
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor instagram">
+											<svg class="icon-team-decor ">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor twitter">
+											<svg class="icon-team-decor ">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor facebook">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor linkedin">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
@@ -253,30 +253,30 @@
 								<h3 class="team-title">Михайло Єрмаков</h3>
 								<p class="content team-content">UI Designer</p>
 								<ul class="list icon-team">
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor instagram">
+											<svg class="icon-team-decor ">
 												<use href="./images/icons.svg#icon-instagram"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor twitter">
+											<svg class="icon-team-decor ">
 												<use href="./images/icons.svg#icon-twitter"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor facebook">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-facebook"></use>
 											</svg>
 										</a>
 									</li>
-									<li class="">
+									<li class="item-clients">
 										<a class="link-icon-team link-decor" href="">
-											<svg class="icon-team-decor linkedin">
+											<svg class="icon-team-decor">
 												<use href="./images/icons.svg#icon-linkedin"></use>
 											</svg>
 										</a>
@@ -369,7 +369,7 @@
 					</address>
 				</div>
 				<div class="social">
-					<h3 class="fotter-header">Приєднуйся</h3>
+					<p class="fotter-header">Приєднуйся</p>
 					<ul class="list icon-footer">
 						<li class="white-icon-footer">
 							<a class="link-icon-team link-decor link-icon-footer" href="">
