--- a/portfolio.html
+++ b/portfolio.html
@@ -19,8 +19,8 @@
 	</head>
 	<body class="Page">
 		<!--header-->
-		<header>
-			<div class="header container header-line">
+		<header class="header-line">
+			<div class="header container">
 				<nav class="header-nav">
 					<a class="link-decor logo-decor" href="./index.html">
 						<span class="logo">Web</span>Studio
